ola-parser/src/testdata/syntaxTests/fallback/fallback_duplicate_returns.sol
contract C {
    fallback() external {}

    fallback() external {}
}
// ----
// DeclarationError 7301: (96-118): Only one fallback fn is allowed.
